--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+     <!-- Agregar la fuente Bebas Neue -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap">
     <title>Give It Uruguay!</title>
   </head>
   <body>
