--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Give It Uruguay!! A place where you can enjoy Red Hot Chili Peppers"
     />
+    <meta 
+      name="keywords" 
+      content="Giveituruguay, Red Hot Chili Peppers, Gigs, Live, Downloads, History, Tour, Show, Setlist, Anthony Kiedis, John Frusciante, Flea, Chad Smith"
+    />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
